// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`react should apply composed mixins 1`] = `
<button
  class="__button_lm3xvp"
  style="--1owzm37_1:red"
>
  click me
</button>
`;

exports[`react should apply composed mixins 2`] = `".__button_lm3xvp{margin:10px;}.__button_lm3xvp{color:var(--1owzm37_1);}.__button_lm3xvp{padding:5px 10px;}"`;

exports[`react should apply conditional mixins 1`] = `
<button
  class="__button_nzpf5v"
  style="--14y9117_1:red"
>
  click me
</button>
`;

exports[`react should apply conditional mixins 2`] = `".__button_nzpf5v{margin:10px;}.__button_nzpf5v{color:white;background:var(--14y9117_1);}"`;

exports[`react should apply conditional mixins 3`] = `
<button
  class="__button_1pj7rgr"
  style="--134zod7_1:green"
>
  click me
</button>
`;

exports[`react should apply conditional mixins 4`] = `".__button_nzpf5v{margin:10px;}.__button_nzpf5v{color:white;background:var(--14y9117_1);}.__button_1pj7rgr{margin:10px;}.__button_1pj7rgr{color:var(--134zod7_1);background:white;}"`;

exports[`react should apply dynamic mixins 1`] = `
<button
  class="__button_1hzemul"
  style="--xqnn5g_1:red"
>
  click me
</button>
`;

exports[`react should apply dynamic mixins 2`] = `".__button_1hzemul{margin:10px;}.__button_1hzemul{color:var(--xqnn5g_1);border:none;}"`;

exports[`react should apply dynamic mixins 3`] = `
<button
  class="__button_1hzemul"
  style="--xqnn5g_1:green"
>
  click me
</button>
`;

exports[`react should apply dynamic mixins 4`] = `".__button_1hzemul{margin:10px;}.__button_1hzemul{color:var(--xqnn5g_1);border:none;}"`;

exports[`react should apply dynamic styles 1`] = `
<button
  class="__button_1pacrc6"
  style="--xkvkx5_1:red"
>
  click me
</button>
`;

exports[`react should apply dynamic styles 2`] = `".__button_1pacrc6{color:var(--xkvkx5_1);}"`;

exports[`react should apply dynamic styles 3`] = `
<button
  class="__button_1pacrc6"
  style="--xkvkx5_1:green"
>
  click me
</button>
`;

exports[`react should apply dynamic styles 4`] = `".__button_1pacrc6{color:var(--xkvkx5_1);}"`;

exports[`react should apply external dynamic styles 1`] = `
<button
  class="__button_1pacrc6"
  style="--xkvkx5_1:red"
>
  click me
</button>
`;

exports[`react should apply external dynamic styles 2`] = `".__button_1pacrc6{color:var(--xkvkx5_1);}"`;

exports[`react should apply external dynamic styles 3`] = `
<button
  class="__button_1pacrc6"
  style="--xkvkx5_1:green"
>
  click me
</button>
`;

exports[`react should apply external dynamic styles 4`] = `".__button_1pacrc6{color:var(--xkvkx5_1);}"`;

exports[`react should apply external styles 1`] = `
<button
  class="__button_olz31h"
>
  click me
</button>
`;

exports[`react should apply external styles 2`] = `".__button_olz31h{color:red;}"`;

exports[`react should apply mixins 1`] = `
<button
  class="__button_13d2oc0"
>
  click me
</button>
`;

exports[`react should apply mixins 2`] = `".__button_13d2oc0{margin:10px;}.__button_13d2oc0{color:red;border:none;}"`;

exports[`react should apply mixins with pseudo 1`] = `
<button
  class="__button_1tuwmo"
>
  click me
</button>
`;

exports[`react should apply mixins with pseudo 2`] = `".__button_1tuwmo{margin:10px;}.__button_1tuwmo{color:red;border:none;}.__button_1tuwmo:focus{color:green;}"`;

exports[`react should apply styles 1`] = `
<button
  class="__button_olz31h"
>
  click me
</button>
`;

exports[`react should apply styles 2`] = `".__button_olz31h{color:red;}"`;

exports[`react styled should apply dynamic styles 1`] = `
<button
  class="__button_pfqxug"
  color="red"
  style="--1rwcy7d_1:red"
>
  click me
</button>
`;

exports[`react styled should apply dynamic styles 2`] = `".__button_pfqxug{color:var(--1rwcy7d_1);}"`;

exports[`react styled should apply for Component 1`] = `
<button
  class="__Component_2z40fb"
>
  click me
</button>
`;

exports[`react styled should apply for Component 2`] = `".__Component_2z40fb{color:red;}"`;

exports[`react styled should apply styles 1`] = `
<button
  class="__button_lmktmf"
>
  click me
</button>
`;

exports[`react styled should apply styles 2`] = `".__button_lmktmf{color:red;}"`;
